--- a/index.html
+++ b/index.html
@@ -1,117 +1,61 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chatbot Testing</title>
+  <title>Sample Website with Chatbase</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      text-align: center;
+      padding: 50px;
     }
-
-    .chat-container {
-      width: 400px;
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      display: flex;
-      flex-direction: column;
+    h1 {
+      color: #333;
     }
-
-    .messages {
-      height: 350px;
-      overflow-y: auto;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 10px;
-      margin-bottom: 15px;
-      background: #fafafa;
+    p {
+      font-size: 18px;
     }
-
-    .message {
-      padding: 8px 12px;
-      margin: 6px 0;
-      border-radius: 8px;
-      max-width: 80%;
-    }
-
-    .user {
-      background: #d2e3ff;
-      align-self: flex-end;
-    }
-
-    .bot {
-      background: #e8e8e8;
-      align-self: flex-start;
-    }
-
-    input {
-      padding: 10px;
-      border-radius: 8px;
-      border: 1px solid #aaa;
-      width: calc(100% - 22px);
-      margin-bottom: 10px;
-    }
-
-    button {
-      padding: 10px;
-      background: #007bff;
-      color: #fff;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      width: 100%;
+    footer {
+      margin-top: 50px;
+      color: #888;
     }
   </style>
 </head>
 <body>
+  <h1>Welcome to My Sample Site</h1>
+  <p>Test your Chatbase chatbot below!</p>
 
-  <div class="chat-container">
-    <h2>Chatbot Testing</h2>
-    <div class="messages" id="messages"></div>
-
-    <input type="text" id="userInput" placeholder="Type your message..." />
-    <button onclick="sendMessage()">Send</button>
-  </div>
-
+  <!-- Chatbase chatbot embed with cache-busting -->
   <script>
-    function sendMessage() {
-      const input = document.getElementById("userInput");
-      const msg = input.value.trim();
-      if (!msg) return;
-
-      addMessage(msg, "user");
-      input.value = "";
-
-      setTimeout(() => {
-        const botReply = getBotResponse(msg);
-        addMessage(botReply, "bot");
-      }, 600);
-    }
-
-    function addMessage(text, sender) {
-      const messagesDiv = document.getElementById("messages");
-      const div = document.createElement("div");
-      div.className = `message ${sender}`;
-      div.textContent = text;
-      messagesDiv.appendChild(div);
-      messagesDiv.scrollTop = messagesDiv.scrollHeight;
-    }
-
-    function getBotResponse(userMsg) {
-      return "This is a test response for: " + userMsg;
-    }
+    (function(){
+      if(!window.chatbase || window.chatbase("getState")!=="initialized"){
+        window.chatbase=(...arguments)=>{
+          if(!window.chatbase.q){window.chatbase.q=[]}
+          window.chatbase.q.push(arguments)
+        };
+        window.chatbase=new Proxy(window.chatbase,{
+          get(target,prop){
+            if(prop==="q"){return target.q}
+            return(...args)=>target(prop,...args)
+          }
+        })
+      }
+      const onLoad=function(){
+        const script=document.createElement("script");
+        script.src="https://www.chatbase.co/embed.min.js?ver=1"; /* cache-busting */
+        script.id="YWW8nfCTckb8SYfxhul_4";
+        script.domain="www.chatbase.co";
+        document.body.appendChild(script)
+      };
+      if(document.readyState==="complete"){onLoad()}
+      else{window.addEventListener("load",onLoad)}
+    })();
   </script>
-<script>
-(function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="YWW8nfCTckb8SYfxhul_4";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
-</script>
+
+  <footer>
+    &copy; 2025 Sample Website
+  </footer>
 </body>
 </html>
